# otus_Python-Developer.Basic

./: .gitlab-ci.yml  README copy.md  README.md  requirements.txt  start_venv.sh
.github/workflows/: python-test.yml
home_works/: start_venv.sh
home_works/hw_1/: functions.py  main.py
home_works/hw_1&2/: README.md
home_works/hw_10/: README.md
home_works/hw_11/: README.md  dump.rdb  redis.conf  requirements.txt
home_works/hw_12/: README.md  pyproject.toml  requirements.txt
project/: .env  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
project/config/: celery.py  settings.py  urls.py
project/nginx/ssl/: 127.0.0.1.crt  127.0.0.1.key
project/ssl/: localhost.crt  localhost.key
project/store_app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
project/store_app/fixtures/: categories.json  products.json
project/store_app/migrations/: 0001_initial.py  0002_order_address_order_phone.py  0006_alter_product_created_at.py  0007_category_image.py  0008_alter_category_image.py  0009_alter_category_image.py
project/store_app/templates/emails/: category_notification.html
project/store_app/templates/store_app/: about.html  cart.html  category_delete.html  category_edit.html  category_list.html  checkout.html  contact.html  delivery.html  home.html  login.html  map_page.html  menu.html  order_confirmation.html  parts.html  product_detail.html  product_list.html
project/store_app/tests/: conftest.py  test_admin.py  test_apps.py  test_forms.py  test_models.py  test_urls.py  test_views.py
(+135 files in other folders)
